# api/api/resources/root.py
@@ -1,7 +1,5 @@
 """REST endpoint for root path to return path directory."""
 
-from collections import OrderedDict
-
 from marshmallow import Schema, fields
 
 from .base import BaseResource
@@ -9,19 +7,15 @@ from ..utils import get_all_subclasses
 
 
 class RootSchema(Schema):
-    path = fields.Dict()
+    directory = fields.Dict(
+        example=["/", "/info", "/openapi", "/ping", "/weather/forecast"]
+    )
 
 
 class RootResource(BaseResource):
 
     path = "/"
     schema = RootSchema
-    example = {
-        "/": "Get a directory of API paths",
-        "/info": "Get server configuration and version information",
-        "/openapi": "Get the OpenAPI specification",
-        "/ping": "Ping the client",
-    }
 
     operations = {
         "get": {
@@ -30,26 +24,21 @@ class RootResource(BaseResource):
             "responses": {
                 200: {
                     "description": "OK",
-                    "content": {
-                        "application/json": {
-                            "schema": schema,
-                            "example": example,
-                        }
-                    },
-                },
-                404: {"description": "Item not found"},
+                    "content": {"application/json": {"schema": schema}},
+                }
             },
         }
     }
 
     def get(self):
-        """Return an object of endpoints which have response OpenAPI documentation."""
+        """Return a list of endpoints."""
 
         return {
-            resource.path: resource.summary
-            for resource in sorted(
-                get_all_subclasses(BaseResource),
-                key=lambda instance: instance.path,
-            )
-            if resource.responses is not None
+            "directory": [
+                resource.path
+                for resource in sorted(
+                    get_all_subclasses(BaseResource),
+                    key=lambda instance: instance.path,
+                )
+            ]
         }
